// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressBook component should renders correctly when errors are present 1`] = `
<div>
  <Styled(Anchor)
    anchorVariation="secondary"
    className="addAddress__anchor__back"
    fontSizeVariation="xlarge"
    to="/account"
  >
    Back
  </Styled(Anchor)>
  <Styled(HeadingStyle)
    HeadingLarge="six"
    className="addAddress__separator"
    fontFamily="secondaryFontFamily"
    tag="h4"
  >
    Add New Shipping Address
  </Styled(HeadingStyle)>
  <Styled(Grid)>
    <Styled(Notification)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
      message="error"
      status="error"
    />
    <Connect(Styled(AddressVerification))
      heading="Add Address"
      labels={
        Object {
          "acc_label_verify_your_address_AE09": "There may be an issue with your address as entered. Please double check it, or if you believe the address is correct you can continue to the next step.",
          "acc_label_verify_your_address_AE10": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_AE11": "The house / building number is missing from your address. Please review and confirm your address.",
          "acc_label_verify_your_address_AE12": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_DEFAULT": "There may be an issue with your address as entered. Please double check it, or select from the below.",
          "acc_lbl_add_address_cta": "ADD ADDRESS",
          "acc_lbl_address_line1": "Address Line 1",
          "acc_lbl_address_line2": "Address Line 2 (Optional)",
          "acc_lbl_cancel_cta": "CANCEL",
          "acc_lbl_city": "City",
          "acc_lbl_continue_cta": "CONTINUE",
          "acc_lbl_country": "Country",
          "acc_lbl_edit_address_cta": "EDIT ADDRESS",
          "acc_lbl_first_name": "First Name",
          "acc_lbl_last_name": "Last Name",
          "acc_lbl_optional_address_line": "Apartment or suite number",
          "acc_lbl_phone_number": "Phone Number",
          "acc_lbl_postal_code": "Postal Code",
          "acc_lbl_province": "Province",
          "acc_lbl_set_default": "Set as default shipping address",
          "acc_lbl_state": "State",
          "acc_lbl_verify_your_address_header": "Verify Your Address",
          "acc_lbl_we_suggest": "WE SUGGEST",
          "acc_lbl_you_entered": "YOU ENTERED",
          "acc_lbl_zip_code": "Zip Code",
          "addNewAddressCTA": "ADD NEW ADDRESS",
          "addressBookHeading": "ADDRESS BOOK",
          "billing": "BILLING",
          "cancel": "No, Don't Delete",
          "createAddressBookBenefitMsg": "Add and save up to 5 shipping addresses so you can speed through the checkout process the next time you shop",
          "createAddressBookMsg": "Create an Address Book to check out faster!",
          "defaultBilling": "DEFAULT BILLING",
          "defaultShipping": "DEFAULT SHIPPING",
          "defaultShippingSuccessFail": "Your action could not be completed due to a system error",
          "defaultShippingSuccessMessage": "Your account has been updated",
          "delete": "Delete",
          "deleteAddressHeading": "DELETE ADDRESS",
          "deleteAddressTitle": "Are you sure you want to delete this address?",
          "deleteConfirm": "Yes, Delete",
          "edit": "Edit",
          "errorMessage": "Your action could not be completed due to a system error",
          "makeDefault": "Make Default",
          "shipping": "SHIPPING",
          "successMessage": "Your account has been updated",
        }
      }
      onError={[Function]}
      onSuccess={[Function]}
    />
    <ReduxForm
      backToAddressBookClick={[Function]}
      destroyOnUnmount={true}
      enableReinitialize={false}
      forceUnregisterOnUnmount={false}
      form="AddAddressForm"
      getFormState={[Function]}
      initialValues={
        Object {
          "address2": "",
          "country": "US",
        }
      }
      keepDirtyOnReinitialize={false}
      labels={
        Object {
          "acc_label_verify_your_address_AE09": "There may be an issue with your address as entered. Please double check it, or if you believe the address is correct you can continue to the next step.",
          "acc_label_verify_your_address_AE10": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_AE11": "The house / building number is missing from your address. Please review and confirm your address.",
          "acc_label_verify_your_address_AE12": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_DEFAULT": "There may be an issue with your address as entered. Please double check it, or select from the below.",
          "acc_lbl_add_address_cta": "ADD ADDRESS",
          "acc_lbl_address_line1": "Address Line 1",
          "acc_lbl_address_line2": "Address Line 2 (Optional)",
          "acc_lbl_cancel_cta": "CANCEL",
          "acc_lbl_city": "City",
          "acc_lbl_continue_cta": "CONTINUE",
          "acc_lbl_country": "Country",
          "acc_lbl_edit_address_cta": "EDIT ADDRESS",
          "acc_lbl_first_name": "First Name",
          "acc_lbl_last_name": "Last Name",
          "acc_lbl_optional_address_line": "Apartment or suite number",
          "acc_lbl_phone_number": "Phone Number",
          "acc_lbl_postal_code": "Postal Code",
          "acc_lbl_province": "Province",
          "acc_lbl_set_default": "Set as default shipping address",
          "acc_lbl_state": "State",
          "acc_lbl_verify_your_address_header": "Verify Your Address",
          "acc_lbl_we_suggest": "WE SUGGEST",
          "acc_lbl_you_entered": "YOU ENTERED",
          "acc_lbl_zip_code": "Zip Code",
          "addNewAddressCTA": "ADD NEW ADDRESS",
          "addressBookHeading": "ADDRESS BOOK",
          "billing": "BILLING",
          "cancel": "No, Don't Delete",
          "createAddressBookBenefitMsg": "Add and save up to 5 shipping addresses so you can speed through the checkout process the next time you shop",
          "createAddressBookMsg": "Create an Address Book to check out faster!",
          "defaultBilling": "DEFAULT BILLING",
          "defaultShipping": "DEFAULT SHIPPING",
          "defaultShippingSuccessFail": "Your action could not be completed due to a system error",
          "defaultShippingSuccessMessage": "Your account has been updated",
          "delete": "Delete",
          "deleteAddressHeading": "DELETE ADDRESS",
          "deleteAddressTitle": "Are you sure you want to delete this address?",
          "deleteConfirm": "Yes, Delete",
          "edit": "Edit",
          "errorMessage": "Your action could not be completed due to a system error",
          "makeDefault": "Make Default",
          "shipping": "SHIPPING",
          "successMessage": "Your account has been updated",
        }
      }
      persistentSubmitErrors={false}
      pure={true}
      shouldAsyncValidate={[Function]}
      shouldError={[Function]}
      shouldValidate={[Function]}
      shouldWarn={[Function]}
      submitAsSideEffect={false}
      touchOnBlur={true}
      touchOnChange={false}
      updateUnregisteredFields={false}
    />
  </Styled(Grid)>
</div>
`;

exports[`AddressBook component should renders correctly without any error 1`] = `
<div>
  <Styled(Anchor)
    anchorVariation="secondary"
    className="addAddress__anchor__back"
    fontSizeVariation="xlarge"
    to="/account"
  >
    Back
  </Styled(Anchor)>
  <Styled(HeadingStyle)
    HeadingLarge="six"
    className="addAddress__separator"
    fontFamily="secondaryFontFamily"
    tag="h4"
  >
    Add New Shipping Address
  </Styled(HeadingStyle)>
  <Styled(Grid)>
    <Connect(Styled(AddressVerification))
      heading="Add Address"
      labels={
        Object {
          "acc_label_verify_your_address_AE09": "There may be an issue with your address as entered. Please double check it, or if you believe the address is correct you can continue to the next step.",
          "acc_label_verify_your_address_AE10": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_AE11": "The house / building number is missing from your address. Please review and confirm your address.",
          "acc_label_verify_your_address_AE12": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_DEFAULT": "There may be an issue with your address as entered. Please double check it, or select from the below.",
          "acc_lbl_add_address_cta": "ADD ADDRESS",
          "acc_lbl_address_line1": "Address Line 1",
          "acc_lbl_address_line2": "Address Line 2 (Optional)",
          "acc_lbl_cancel_cta": "CANCEL",
          "acc_lbl_city": "City",
          "acc_lbl_continue_cta": "CONTINUE",
          "acc_lbl_country": "Country",
          "acc_lbl_edit_address_cta": "EDIT ADDRESS",
          "acc_lbl_first_name": "First Name",
          "acc_lbl_last_name": "Last Name",
          "acc_lbl_optional_address_line": "Apartment or suite number",
          "acc_lbl_phone_number": "Phone Number",
          "acc_lbl_postal_code": "Postal Code",
          "acc_lbl_province": "Province",
          "acc_lbl_set_default": "Set as default shipping address",
          "acc_lbl_state": "State",
          "acc_lbl_verify_your_address_header": "Verify Your Address",
          "acc_lbl_we_suggest": "WE SUGGEST",
          "acc_lbl_you_entered": "YOU ENTERED",
          "acc_lbl_zip_code": "Zip Code",
          "addNewAddressCTA": "ADD NEW ADDRESS",
          "addressBookHeading": "ADDRESS BOOK",
          "billing": "BILLING",
          "cancel": "No, Don't Delete",
          "createAddressBookBenefitMsg": "Add and save up to 5 shipping addresses so you can speed through the checkout process the next time you shop",
          "createAddressBookMsg": "Create an Address Book to check out faster!",
          "defaultBilling": "DEFAULT BILLING",
          "defaultShipping": "DEFAULT SHIPPING",
          "defaultShippingSuccessFail": "Your action could not be completed due to a system error",
          "defaultShippingSuccessMessage": "Your account has been updated",
          "delete": "Delete",
          "deleteAddressHeading": "DELETE ADDRESS",
          "deleteAddressTitle": "Are you sure you want to delete this address?",
          "deleteConfirm": "Yes, Delete",
          "edit": "Edit",
          "errorMessage": "Your action could not be completed due to a system error",
          "makeDefault": "Make Default",
          "shipping": "SHIPPING",
          "successMessage": "Your account has been updated",
        }
      }
      onError={[Function]}
      onSuccess={[Function]}
    />
    <ReduxForm
      backToAddressBookClick={[Function]}
      destroyOnUnmount={true}
      enableReinitialize={false}
      forceUnregisterOnUnmount={false}
      form="AddAddressForm"
      getFormState={[Function]}
      initialValues={
        Object {
          "address2": "",
          "country": "US",
        }
      }
      keepDirtyOnReinitialize={false}
      labels={
        Object {
          "acc_label_verify_your_address_AE09": "There may be an issue with your address as entered. Please double check it, or if you believe the address is correct you can continue to the next step.",
          "acc_label_verify_your_address_AE10": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_AE11": "The house / building number is missing from your address. Please review and confirm your address.",
          "acc_label_verify_your_address_AE12": "The house / building number is not valid. Please review and confirm your address.",
          "acc_label_verify_your_address_DEFAULT": "There may be an issue with your address as entered. Please double check it, or select from the below.",
          "acc_lbl_add_address_cta": "ADD ADDRESS",
          "acc_lbl_address_line1": "Address Line 1",
          "acc_lbl_address_line2": "Address Line 2 (Optional)",
          "acc_lbl_cancel_cta": "CANCEL",
          "acc_lbl_city": "City",
          "acc_lbl_continue_cta": "CONTINUE",
          "acc_lbl_country": "Country",
          "acc_lbl_edit_address_cta": "EDIT ADDRESS",
          "acc_lbl_first_name": "First Name",
          "acc_lbl_last_name": "Last Name",
          "acc_lbl_optional_address_line": "Apartment or suite number",
          "acc_lbl_phone_number": "Phone Number",
          "acc_lbl_postal_code": "Postal Code",
          "acc_lbl_province": "Province",
          "acc_lbl_set_default": "Set as default shipping address",
          "acc_lbl_state": "State",
          "acc_lbl_verify_your_address_header": "Verify Your Address",
          "acc_lbl_we_suggest": "WE SUGGEST",
          "acc_lbl_you_entered": "YOU ENTERED",
          "acc_lbl_zip_code": "Zip Code",
          "addNewAddressCTA": "ADD NEW ADDRESS",
          "addressBookHeading": "ADDRESS BOOK",
          "billing": "BILLING",
          "cancel": "No, Don't Delete",
          "createAddressBookBenefitMsg": "Add and save up to 5 shipping addresses so you can speed through the checkout process the next time you shop",
          "createAddressBookMsg": "Create an Address Book to check out faster!",
          "defaultBilling": "DEFAULT BILLING",
          "defaultShipping": "DEFAULT SHIPPING",
          "defaultShippingSuccessFail": "Your action could not be completed due to a system error",
          "defaultShippingSuccessMessage": "Your account has been updated",
          "delete": "Delete",
          "deleteAddressHeading": "DELETE ADDRESS",
          "deleteAddressTitle": "Are you sure you want to delete this address?",
          "deleteConfirm": "Yes, Delete",
          "edit": "Edit",
          "errorMessage": "Your action could not be completed due to a system error",
          "makeDefault": "Make Default",
          "shipping": "SHIPPING",
          "successMessage": "Your account has been updated",
        }
      }
      persistentSubmitErrors={false}
      pure={true}
      shouldAsyncValidate={[Function]}
      shouldError={[Function]}
      shouldValidate={[Function]}
      shouldWarn={[Function]}
      submitAsSideEffect={false}
      touchOnBlur={true}
      touchOnChange={false}
      updateUnregisteredFields={false}
    />
  </Styled(Grid)>
</div>
`;
